adding viewModel e others logics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Suzana</string>
+    <string name="wait_before_sen_new_message">⏳ Espere a resposta anterior para poder mandar uma nova mensagem</string>
 </resources>
